:recycle: ジャケットアップロード処理を整理
